feat: updated get events for message schema
